<resources>
    <string name="app_name">TicTacToe</string>
    <string name="tic_tac_toe_main">Tic Tac Toe</string>
    <string name="exit">Exit</string>
    <string name="start_game">Start Game</string>
    <string name="gameimage">GameImage</string>
    <string name="two_players">Two Players!</string>
    <string name="home">Home</string>
    <string name="multiple_players">Multi Players! - No</string>
    <string name="end_game">End Game</string>
    <string name="image3">image3</string>
    <string name="image1">image1</string>
    <string name="image2">image2</string>
    <string name="image4">image4</string>
    <string name="image5">image5</string>
    <string name="image6">image6</string>
    <string name="image7">image7</string>
    <string name="image8">image8</string>
    <string name="image9">image9</string>
    <string name="tic_tac_toe_game">Tic Tac Toe</string>
    <string name="play_again">Play Again</string>
    <string name="exit_high_score">Exit</string>
    <string name="high_score_main">High Score</string>
    <string name="move">Move</string>
    <string name="result">Result</string>
    <string name="high_score_high_score">High Score</string>
    <string name="name_lable">Name:</string>
    <string name="name_text_edit"></string>
    <string name="save">Save</string>
    <string name="enter_your_name_hint">Enter your name</string>
    <string name="result_button">Result</string>
    <string name="close_button">Home</string>
    <string name="info_text">Info</string>
    <string name="info_menu">info</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="your_turn">Lets Play!</string>
</resources>